--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,53 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+html {
+  font-size: 16px;
+  font-family: sans-serif;
+  background-color: var(--black2);
+  color: var(--white);
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 4.5vw;
   }
 }
 
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  min-height: 100dvh;
+  grid-template-rows: auto 1fr auto;
+  display: grid;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+button, input, textarea {
+  border: none;
+  outline: none;
+  background: none;
+  color: var(--white);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+button {
+  border: .08rem solid var(--white);
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+button:hover {
+  color: var(--black2);
+  border: .08rem solid var(--white);
+  background-color: var(--white);
 }
 
 a {
-  color: inherit;
+  color: var(--white);
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+li {
+  list-style: none;
 }
