--- a/app/collors.css
+++ b/app/collors.css
@@ -1,6 +1,6 @@
 :root {
   --black: #1e1e1e;
-  --black2: #252526;
+  --black2: #2d2d2e;
   --white: #d4d4d4;
   --gray: #858585;
   --gray2: #c6c6b4;
