--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,12 +1,14 @@
 .header {
+  height: 4rem;
   padding: .8rem 2.5rem;
   background-color: var(--black);
-  justify-content: space-between;
-  display: flex;
+  align-items: center;
 }
 
 .btn {
-  height: 100%;
+  height: 2.4rem;
   padding: 0 1rem;
+  margin-left: auto;
   border-radius: 100vw;
+  display: block;
 }
