--- a/app/leads/leads.module.css
+++ b/app/leads/leads.module.css
@@ -1,7 +1,7 @@
 .page {
+  max-width: 100dvw;
   max-height: 91dvh;
-  overflow-y: scroll;
-  padding: 2rem;
+  overflow: scroll;
 }
 
 .main {
@@ -29,108 +29,31 @@
   font-size: 1.2rem;
 }
 
-.list {
+.table thead {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   color: var(--white);
-  max-width: 800px;
-  margin: 2rem auto;
+  text-align: left;
 }
 
-.item {
-  padding: 1rem;
-  border-radius: 1rem;
-  background-color: var(--black);
-}
-.item:nth-child(even) {
-  background-color: var(--black2);
+.table thead th {
+  padding: 0.5rem;
+  background-color: var(--blue3);
 }
 
-.lead {
-  padding: .8rem;
-  border-radius: 1rem;
-  border: .1rem solid var(--gray);
+.table tbody td {
+  padding: 12px;
+  border-bottom: 1px solid var(--black2);
 }
 
-.leadHeader {
-  position: relative;
-  align-items: baseline;
-  gap: 1rem;
-  display: flex;
+.table tbody tr:hover td {
+  background-color: color-mix(in srgb, var(--blue3) 40%, var(--white) 60%) ;
+  transition: all .3s;
 }
 
-.leadShow {
-  position: absolute;
-  height: 2rem;
-  width: 2rem;
-  right: .8rem;
-  transform: rotateZ(90deg);
-  border-radius: 100vw;
-}
-
-
-
-.leadCurrent .leadShow {
-  transform: rotateZ(-90deg);
-}
-
-.leadInfo {
-  height: 0rem;
-  overflow: hidden;
-}
-
-.leadCurrent .leadInfo {
-  height: 100%;
-}
-
-.leadProps {
-  margin: 1rem;
-  gap: 1rem;
-  flex-wrap: wrap;
-  display: flex;
-}
-
-.leadProp {
-  padding: .2rem 1rem;
-  border-radius: 100vw;
-  background-color: var(--perple);
-}
-
-.leadFooter {
-  margin-top: 1rem;
-  gap: 1rem;
-  flex-wrap: wrap;
-  display: flex;
-}
-
-.leadContact {
-  padding: 0 .5rem;
-  border-radius: 100vw;
-  color: var(--black);
-  background-color: var(--gray2);
-  align-items: center;
-  display: flex;
-}
-
-.leadContactImg {
-  width: 2rem;
-}
-
-.leadContactInfo {
-  width: 0rem;
-  overflow: hidden;
-  transition: all .8s;
-  display: grid;
-}
-
-.leadContact:hover .leadContactInfo {
-  width: 100%;
-  padding-left: .5rem;
-}
-
-@media (max-width: 500) {
-  .page {
-    padding: 0;
-  }
-  .leadHeader {
-    display: grid;
-  }
+.fixRow {
+  position: sticky;
+  left: 0;
+  background-color: var(--white);
 }
