--- a/app/chat-ai/chat-ai.module.css
+++ b/app/chat-ai/chat-ai.module.css
@@ -25,19 +25,29 @@
 
 .chat {
   height: 100%;
-  padding-right: 1rem;
   overflow-y: scroll;
+  gap: 1.5rem;
+  display: grid;
+}
+
+.chat::-webkit-scrollbar {
+  display: none;
 }
 
 .msg {
   white-space: pre-line;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .msg.user {
   max-width: 80%;
   width: fit-content;
   margin-left: auto;
-  background-color: var(--gray2);
+  padding: 1rem;
+  border-radius: .5rem;
+  background-color: color-mix(in srgb, var(--gray) 20%, var(--white) 80%) ;
 }
 
 .footer {
@@ -68,7 +78,13 @@
 }
 
 .send {
+  height: 2rem;
   border: none;
+}
+
+.send img {
+  height: 100%;
+  width: auto;
 }
 
 .send:hover {
