--- a/app/leads/leads.module.css
+++ b/app/leads/leads.module.css
@@ -39,6 +39,7 @@
   z-index: 2;
   width: 100%;
   height: 0;
+  transition: all .1s;
 }
 
 .action {
@@ -139,4 +140,10 @@
 } .leadClosed {
   color: var(--white);
   background-color: var(--orange2);
+}
+
+@media (max-width: 750px) {
+  .actionBtn p {
+    display: none;
+  }
 }
