--- a/app/chat-ai/chat-ai.module.css
+++ b/app/chat-ai/chat-ai.module.css
@@ -27,7 +27,8 @@
   height: 100%;
   overflow-y: scroll;
   gap: 1.5rem;
-  display: grid;
+  flex-direction: column;
+  display: flex;
 }
 
 .chat::-webkit-scrollbar {
@@ -46,8 +47,8 @@
   width: fit-content;
   margin-left: auto;
   padding: 1rem;
-  border-radius: .5rem;
-  background-color: color-mix(in srgb, var(--gray) 20%, var(--white) 80%) ;
+  border-radius: 0.5rem;
+  background-color: color-mix(in srgb, var(--gray) 20%, var(--white) 80%);
 }
 
 .footer {
@@ -89,6 +90,60 @@
 
 .send:hover {
   animation: sendBtn 1.5s ease forwards; /* замінив inline на ease */
+}
+
+.slider {
+  margin: 1rem 0;
+}
+
+.slider > div {
+  width: fit-content;
+  justify-items: left;
+  display: flex;
+}
+
+.card {
+  width: fit-content;
+  background-color: color-mix(in srgb, var(--black) 10%, var(--white) 90%);
+  border-radius: 12px;
+  padding: 8px;
+}
+
+.cardImg {
+  width: auto;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.cardBtnGo {
+  padding: 0.2rem 0.5rem;
+  color: var(--white);
+  font-weight: 600;
+  border-radius: 100vw;
+  background-color: var(--blue2);
+}
+
+.cardBtnStar {
+  position: relative;
+  z-index: 1;
+  border: none;
+  font-size: 2.5rem;
+  line-height: 0;
+  color: var(--yellow2);
+}
+
+.cardBtnStar::before {
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  content: "★";
+  font-size: 1.2em;
+  line-height: 0;
+  color: var(--yellow);
+  display: block;
 }
 
 @keyframes sendBtn {
